wrote some tests

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -10,7 +10,8 @@
     <script src="src/breakDancer.js"></script>
   </head>
   <body>
-    <div class="topbar">
+    <img style="position: fixed" src= "space.png">
+    <div class="topbar" style="position: fixed">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBallRoomDancer">add a ballRoomDancer</a>
