--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,9 +15,14 @@
     });
   </script>
   <script src="spec/blinkyDancerSpec.js"></script>
+  <script src="spec/ballRoomDancerSpec.js"></script>
+  <script src="spec/breakDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
-</head>
+  <script src="src/ballRoomDancer.js"></script>
+  <script src="src/breakDancer.js"></script>
+  <script src="src/dancer.js"></script>
+
 <body>
 <div id="mocha"></div>
 </body>
