--- a/dancefloor.html
+++ b/dancefloor.html
@@ -13,9 +13,23 @@
     <img style="position: fixed" src= "space.png">
     <div class="topbar" style="position: fixed">
       <span class="title">object dance party</span>
+      <button onclick="lineUp()">Line Up!</button>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBallRoomDancer">add a ballRoomDancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBreakDancer">add a breakDancer</a>    </div>
     <script src="src/init.js"></script>
+    <script>
+      $('span').mouseover(function() {
+      $('span').css('display', 'none');
+      $('span').fadeTo("slow", 0.33);
+      });
+
+      function lineUp() {
+        for (let i = 0; i < window.dancers.length; i++) {
+          window.dancers[i].top = 30;
+          console.log(window.dancers[i].$node);
+        }
+      }
+    </script>
   </body>
 </html>
