--- a/dancefloor.html
+++ b/dancefloor.html
@@ -12,11 +12,11 @@
   <body>
     <img style="position: fixed" src= "space.png">
     <div class="topbar" style="position: fixed">
-      <span class="title">Shaq and Kittens Dance Party</span>
+      <span class="title">Shaq and Kittens Space Party</span>
       <button onclick="lineUp()">Line Up!</button>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">add a blinky dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBallRoomDancer">add a ballRoomDancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBreakDancer">add a breakDancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">Blinky Cat</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBallRoomDancer">Spinny Cat</a>
+      <a href="#" class="addDancerButton" id= "shaq" data-dancer-maker-function-name="MakeBreakDancer">Shaq</a>    </div>
     <script src="src/init.js"></script>
     <script>
       $('span').mouseover(function() {
