--- a/dancefloor.html
+++ b/dancefloor.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Object Dance Party</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-    <script src="lib/jquery.js"></script>
-    <script src="src/dancer.js"></script>
-    <script src="src/blinkyDancer.js"></script>
-    <script src="src/ballRoomDancer.js"></script>
-    <script src="src/breakDancer.js"></script>
-  </head>
-  <body>
-    <img style="position: fixed" src= "space.png">
-    <div class="topbar" style="position: fixed">
-      <span class="title">Shaq and Kittens Space Party</span>
-      <button onclick="lineUp()">Line Up!</button>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">Blinky Cat</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBallRoomDancer">Spinny Cat</a>
-      <a href="#" class="addDancerButton" id= "shaq" data-dancer-maker-function-name="MakeBreakDancer">Shaq</a>    </div>
-    <script src="src/init.js"></script>
-    <script>
-      $('span').mouseover(function() {
-      $('span').css('display', 'none');
-      $('span').fadeTo("slow", 0.33);
-      });
 
-      function lineUp() {
-        for (let i = 0; i < window.dancers.length; i++) {
-          window.dancers[i].top = 30;
-        }
+<head>
+  <title>Shaq and Kittens Dance Party</title>
+  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <script src="lib/jquery.js"></script>
+  <script src="src/dancer.js"></script>
+  <script src="src/blinkyDancer.js"></script>
+  <script src="src/spinDancer.js"></script>
+  <script src="src/shaqDancer.js"></script>
+</head>
+
+<body>
+  <img style="position: fixed" src="space.png">
+  <div class="topbar" style="position: fixed">
+    <span class="title">Dance Party</span>
+
+    <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">Blinky Cat</a>
+    <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeSpinDancer">Spinny Cat</a>
+    <a href="#" class="addDancerButton" id="shaq" data-dancer-maker-function-name="MakeShaqDancer">Shaq Attack</a>
+    <button onclick="lineUp()"><strong>LINE UP</strong></button>
+  </div>
+  <script src="src/init.js"></script>
+  <script>
+    function lineUp() {
+      for (let i = 0; i < window.dancers.length; i++) {
+        window.dancers[i].top = 30;
       }
-    </script>
-  </body>
+    }
+  </script>
+</body>
+
 </html>
